--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fugitive"]
 	path = fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "command-t"]
+	path = command-t
+	url = https://github.com/wincent/Command-T.git
