--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "command-t"]
 	path = command-t
 	url = https://github.com/wincent/Command-T.git
+[submodule "surround"]
+	path = surround
+	url = https://github.com/tpope/vim-surround
