--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ragtag"]
 	path = ragtag
 	url = https://github.com/tpope/vim-ragtag.git
+[submodule "coffee-script"]
+	path = coffee-script
+	url = https://github.com/kchmck/vim-coffee-script.git
