--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "coffee-script"]
 	path = coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
+[submodule "rainbow_parentheses"]
+	path = rainbow_parentheses
+	url = https://github.com/kien/rainbow_parentheses.vim.git
